--- a/src/components/CartModal/CartModal.css
+++ b/src/components/CartModal/CartModal.css
@@ -4,48 +4,48 @@
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.5);
+    background-color: rgba(0, 0, 0, 0.5);
     display: flex;
     justify-content: center;
     align-items: center;
-  }
-  
-  .cart-modal-content {
-    background: white;
-    width: 80%;
-    max-width: 800px;
+    z-index: 1000;
+}
+
+.cart-modal-content {
+    background-color: white;
     padding: 20px;
+    border-radius: 8px;
+    width: 60%;
+    max-width: 800px;
+    position: relative;
+}
+
+.close-button {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background: black;
+    border: none;
+    font-size: 24px;
+    cursor: pointer;
+}
+
+.cart-items-summary,
+.user-info-form {
+    margin-bottom: 20px;
+}
+
+.cart-item {
     display: flex;
     justify-content: space-between;
-  }
-  
-  .cart-summary {
-    width: 50%;
-  }
-  
-  .cart-form {
-    width: 45%;
-  }
-  
-  input {
+    margin-bottom: 10px;
+}
+
+input {
     display: block;
     width: 100%;
-    margin-bottom: 10px;
     padding: 10px;
+    margin-bottom: 10px;
     border: 1px solid #ccc;
     border-radius: 4px;
-  }
-  
-  button {
-    padding: 10px 20px;
-    background-color: #000;
-    color: white;
-    border: none;
-    cursor: pointer;
-    border-radius: 4px;
-  }
-  
-  button:hover {
-    background-color: #333;
-  }
-  
+}
